force-app/main/default/objects/Event_Sponsorship__c/Event_Sponsorship__c.object-meta.xml
<CustomObject>
    <description
  >These are sponsorships for events put into the system with relevant data pertaining to them. (Currently being piloted with EM Events and Custom Events Only)</description>
    <label>Event Sponsorship</label>
    <nameField>
        <displayFormat>EventSponsorship-{00000}</displayFormat>
        <label>Event Sponsorship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Sponsorships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>