force-app/main/default/objects/Event_Sponsorship__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>This is the event the sponsorship is for.</description>
    <inlineHelpText>This is the event the sponsorship is for.</inlineHelpText>
    <label>Event</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Event Sponsorships</relationshipLabel>
    <relationshipName>Event_Sponsorships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>