force-app/main/default/objects/Event_Sponsorship__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <description
  >This is the amount that the sponsorship was actually sold for.</description>
    <inlineHelpText
  >This is the amount that the sponsorship was actually sold for.</inlineHelpText>
    <label>Payment</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>