force-app/main/default/objects/Event_Sponsorship__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which sponsorship product was purchased.</description>
    <inlineHelpText>Which sponsorship product was purchased.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Event Sponsorships</relationshipLabel>
    <relationshipName>Event_Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>