force-app/main/default/objects/Event_Sponsorship__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the client that is sponsoring the event.</description>
    <inlineHelpText
  >This is the client that is sponsoring the event.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Sponsorships</relationshipLabel>
    <relationshipName>Event_Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>